[tool.poetry]
name = "vibraproject"
version = "0.1.0"
description = ""
authors = ["fernando <sande.fernando.32656@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
pandas = "^1.5.0"
uvicorn = "^0.18.3"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
