[tool.poetry]
name = "vibraproject"
version = "0.1.0"
description = ""
authors = ["fernando <sande.fernando.32656@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
pandas = "^1.5.0"
uvicorn = "^0.18.3"
pre-commit = "^2.20.0"
pylint = "^2.15.3"
mypy = "^0.971"
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.8.0"
pytest = "^7.1.3"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
